# rpg_parser

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md  cli.py  downloaded_spell.json  exporter.py  hydraulic_torrent.json  main.py  parser.py  pyproject.toml  scraper.py  scratch_pf1e_parse.py
.github/workflows/: ci.yml
rpg_parser/: registry.py
rpg_parser/adapters/exporters/: json_file.py
rpg_parser/adapters/fetchers/: aon.py  open5e.py
rpg_parser/adapters/parsers/: dnd5e_open5e.py  pf1e_aon.py  pf2e_aon.py
rpg_parser/adapters/scrapers/: aon.py  open5e.py  pf1e_aon.py
rpg_parser/core/: pipeline.py  ports.py
samples/: pf1e_magic_missile.json  sample_dnd5e_open5e_list.json  sample_dnd5e_open5e_spell.json  sample_pf1e_bundled_spell.html  sample_pf1e_curse_terrain.html  sample_pf1e_spell.html  sample_spell.html  spells.json
tests/: test_aon_scraper.py  test_cli.py  test_dnd5e_open5e_parser.py  test_dnd5e_open5e_scraper.py  test_pf1e_parser.py  test_pf1e_scraper.py  test_pf2e_aon_parser.py  test_pipeline.py  test_registry.py  test_scrape_pipeline.py  test_scraper.py
tools/: check_duplicate_ids.py
