[project]
name = "rpg-parser"
version = "0.1.0"
description = "Fetch and parse Pathfinder 1e/2e spell data from Archives of Nethys into structured JSON."
readme = "README.md"
requires-python = ">=3.14"
license = { file = "LICENSE" }
authors = [
    { name = "Burcin Sayin", email = "burcinsayin@gmail.com" },
]
keywords = ["pathfinder", "rpg", "scraper", "archives-of-nethys", "ttrpg", "spells"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.34.2",
]

[project.urls]
Homepage = "https://github.com/BurcinSayin/rpg_parser"
Repository = "https://github.com/BurcinSayin/rpg_parser"
Issues = "https://github.com/BurcinSayin/rpg_parser/issues"

[dependency-groups]
# Tests use the standard-library `unittest`; only linting needs an extra tool.
dev = [
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# Line length is a guideline, not enforced in lint — use `ruff format` if you
# want it reflowed. This keeps the lint signal focused on correctness and imports.
ignore = ["E501"]
